Fix app not using docker proxy. WIP fixing lambda serialization.